--- a/src/partials/components/logo.html
+++ b/src/partials/components/logo.html
@@ -1,14 +1,6 @@
 <div class='logo'>
-  <picture>
-    <source srcset='
-                       ./images/logo/logo.webp 1x,
-                       ./images/logo/logo@2x.webp 2x'
-            type='image/webp'>
-    <source srcset='
-                      ./images/logo/logo.png 1x,
-                      ./images/logo/logo@2x.png 2x'
-    >
-
-    <img class='logo-img' src='./images/logo/logo.png' alt='logo' width='70'>
-  </picture>
+  <svg class='icon hero__icon' width='53' height='44'>
+    <use xlink:href='./images/sprite.svg#icon-logo'></use>
+  </svg>
+  <p class="logo__text">UXMCs <span>museum</span></p>
 </div>
