--- a/src/partials/components/menu.html
+++ b/src/partials/components/menu.html
@@ -3,15 +3,18 @@
     <a href='#home' class='menu__link'>home</a>
   </li>
   <li class='menu__item'>
+    <a href='#events' class='menu__link'>events</a>
+  </li>
+  <li class='menu__item'>
     <a href='#gallery' class='menu__link'>gallery</a>
   </li>
   <li class='menu__item'>
-    <a href='#projects' class='menu__link'>projects</a>
+    <a href='#updates' class='menu__link'>updates</a>
   </li>
   <li class='menu__item'>
-    <a href='#certificates' class='menu__link'>certificates</a>
+    <a href='#history' class='menu__link'>history</a>
   </li>
   <li class='menu__item'>
-    <a href='#contacts' class='menu__link'>contacts</a>
+    <a href='#contact' class='menu__link'>contact</a>
   </li>
 </ul>
