--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,6 +1,13 @@
 .container {
-   max-width: 1270px;
   margin: 0 auto;
   padding: 0 15px;
+  @include for-size(tablet) {
+    max-width: var(--tablet);
+    padding: 0 15px;
+  }
 
+  @include for-size(desktop) {
+    max-width: var(--desktop);
+    padding: 0 15px;
+  }
 }
