--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,16 +1,19 @@
-:root{
+:root {
+  // page-size
+  --mobile: 480px;
+  --tablet: 768px;
+  --desktop: 1260px;
   //bg-color
-  --primary-bg-color: #fff5f6;
-  --secondary-bg-color: #ffffff;
-  --hero-bg-color: #ffb8ca;
-  --mob-menu-bg-color: #e17992;
-  --mob-menu-border: #e18298;
+  --primary-bg-color: #111;
+  --secondary-bg-color: #000;
+  --hero-bg-color: #111;
+  --btn-color: #404040;
   // TEXT COLOR
-
-  --primary-text-color: #000000;
-  --secondary-text-color: #ffa5ba;
-  --menu-text-color: #333;
-  --lite-text-color: #ffffff;
-  --underline-color: #e1e1e1;
-
+  --primary-text-color: #ffff;
 }
+
+$mobile: 480px;
+$to-tablet: 767px;
+$tablet: 768px;
+$to-desktop: 1199px;
+$desktop: 1260px;
