--- a/src/partials/components/headLinks.html
+++ b/src/partials/components/headLinks.html
@@ -2,8 +2,10 @@
 <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.com/css2?family=Bellefair&family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;1,400&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Bellefair&family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;1,400&display=swap"
   rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollTrigger.min.js"></script>
