--- a/src/partials/components/logo.html
+++ b/src/partials/components/logo.html
@@ -1,6 +1,6 @@
 <div class='logo'>
-  <svg class='icon hero__icon' width='53' height='44'>
+  <svg class='logo__icon' width='53' height='44'>
     <use xlink:href='./images/sprite.svg#icon-logo'></use>
   </svg>
-  <p class="logo__text">UXMCs <span>museum</span></p>
+  <p class="logo__text">UXMCs<span>museum</span></p>
 </div>
