--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,17 +1,28 @@
 .logo {
-  //display: flex;
-  //align-items: center;
-  //
-  //&__text {
-  //  margin-right: 9px;
-  //}
-  //
-  //&__text p {
-  //  font-family: Montserrat, sans-serif;
-  //  font-size: 28px;
-  //  font-style: normal;
-  //  font-weight: 600;
-  //  line-height: calc(32 / 28);
-  //  color: #FFFFFF;
-  //}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  &__icon {
+  }
+
+  &__text {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary-text-color);
+    text-align: center;
+    font-family: Baskervville, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: calc(12 / 12);
+    text-transform: uppercase;
+    span{
+      margin-top: 4px;
+    }
+  }
 }
