--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,13 +2,22 @@
   width: 100%;
   padding-top: 45px;
   padding-bottom: 45px;
-  &__container{
+  background-color: var(--primary-bg-color);
+
+  &__container {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+  }
+
+  &__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   &__menu {
-    margin-left: auto;
   }
 }
