--- a/src/sass/layout/index.scss
+++ b/src/sass/layout/index.scss
@@ -1,7 +1,8 @@
 @import "./header";
 @import "./hero";
+@import "./events";
 @import "./gallery";
-@import "./projects";
-@import "./certificates";
-@import "contacts";
+@import "./updates";
+@import "history";
+@import "contact";
 @import "footer";
