--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -2,7 +2,7 @@
   &__list {
     text-decoration: none;
     display: flex;
-
+    align-items: center;
   }
 
   &__item:not(:last-child) {
@@ -26,6 +26,7 @@
     font-weight: 400;
     line-height: calc(12 / 12);
     text-transform: uppercase;
-
+    padding: 30px 0;
+    cursor: pointer;
   }
 }
