--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,7 +4,7 @@
   --tablet: 768px;
   --desktop: 1260px;
   //bg-color
-  --primary-bg-color: #111;
+  --primary-bg-color: #0D0D0D;
   --secondary-bg-color: #000;
   --hero-bg-color: #111;
   --btn-color: #404040;
