fixissue with styles hero

--- a/src/partials/pages/main.html
+++ b/src/partials/pages/main.html
@@ -1,5 +1,6 @@
 <main class='page'>
   <include src='./partials/layouts/hero.html'></include>
+  <include src='./partials/layouts/about.html'></include>
   <include src='./partials/layouts/events.html'></include>
   <include src='./partials/layouts/gallery.html'></include>
   <include src='./partials/layouts/updates.html'></include>
