--- a/src/partials/layouts/hero.html
+++ b/src/partials/layouts/hero.html
@@ -1,17 +1,21 @@
 <section class="hero">
-  <div class="container hero__container">
+  <div class="hero__row">
     <div class="hero__ellipce"></div>
     <picture>
       <source srcset="
-                          ./images/hero/heroImg.webp 1x,
-                          ./images/hero/heroImg@2x.webp 2x"
+                      ./images/hero/heroImg.webp 1x,
+                      ./images/hero/heroImg@2x.webp 2x"
               type="image/webp"
               media="(max-width: 1200px)">
       <source srcset="
-                        ./images/hero/heroImg.png 1x,
-                        ./images/hero/heroImg@2x.png 2x"
+                      ./images/hero/heroImg.png 1x,
+                      ./images/hero/heroImg@2x.png 2x"
               media="(max-width: 1200px)">
       <img class="_img hero__img" src="./images/hero/heroImg.png" alt="art">
     </picture>
+
+  </div>
+  <div class="container hero__container">
+    <h1 class="hero__title">We preserve History To build Future</h1>
   </div>
 </section>
