--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -2,16 +2,29 @@
   margin-top: 110px;
   width: 100%;
   //height: 100vh;
+
   //overflow: hidden;
+
 
   &__container {
     position: relative;
     width: 100%;
-    height: 600px;
+    //padding: 474px 0;
+    //height: 100vh;
+  }
+
+  &__row {
+    position: relative;
+    width: 100%;
+    padding: 474px 0;
+    overflow: hidden;
   }
 
   &__ellipce {
-    position: relative;
+    position: absolute;
+    top: 3%;
+    left: 18%;
+    //transform: translate(-50%, -50%);
     width: 1378.139px;
     height: 1378.139px;
     flex-shrink: 0;
@@ -29,23 +42,43 @@
   }
 
   &__ellipce::before {
-    border: 17px solid rgba(255, 255, 255, 0.5);
-    filter: blur(10px); /* Размытие внутрь */
+    border: 19px solid rgba(255, 255, 255, 0.9);
+    filter: blur(4px);
   }
 
   &__ellipce::after {
-    border: 17px solid rgba(255, 255, 255, 0.5);
-    filter: blur(10px); /* Размытие внешнее */
+    border: 25px solid rgba(255, 255, 255, 0.9);
+    filter: blur(0);
     z-index: -1;
   }
 
   &__img {
-    display:block ;
+    display: block;
     width: 1378px;
     position: absolute;
-    top: 85%;
-    left: 60%;
+    top: 53%;
+    left: 62%;
     transform: translate(-50%, -50%);
     z-index: 12;
+  }
+
+  &__title {
+    width: 100%;
+    position: absolute;
+    bottom: -50%;
+    left: 0;
+    z-index: 16;
+    transform: translate(0, 50%);
+    background: linear-gradient(32deg, #111 0%, rgba(0, 0, 0, 0.00) 100%);
+    padding: 85.25px 0;
+    color: #FFF;
+    text-align: center;
+    font-family: Bellefair, sans-serif;
+    font-size: 91.612px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: calc(91.612 / 91.612);
+    text-transform: uppercase;
+
   }
 }
