--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -5,4 +5,50 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
+
+  &__navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+  }
+
+  &__menu {
+    margin-top: 62px;
+  }
+
+  &__contacts {
+  }
+}
+
+.f-menu {
+  column-count: 2; /* Устанавливаем количество колонок */
+  column-gap: 20px;
+
+  &__item {
+    margin-right: 75px;
+    margin-bottom: 43px;
+
+    &:nth-child(n+4) {
+      margin-right: 0;
+    }
+
+  }
+  &__item:nth-child(n+4) {
+    margin-right: 0;
+  }
+
+
+  &__link {
+    padding: 10px 0;
+    color: #FFF;
+    font-family: Baskervville, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: calc(12 / 12);
+    text-transform: uppercase;
+
+  }
+
 }
