--- a/src/partials/layouts/footer.html
+++ b/src/partials/layouts/footer.html
@@ -26,10 +26,18 @@
           </li>
         </ul>
       </div>
-      <ul class="footer__menu-list"></ul>
     </div>
     <div class="footer__contacts contacts">
-      <form class="contacts__form"></form>
+      <form class="contacts__form 'subscr-form">
+        <label class='subscr-form__field'>
+          <input type='email' class='subscr-form__input' name='mail'
+                 placeholder='Enter your Email'/>
+        </label>
+        <button type='button' class=' button subscr-form__btn'>
+          <span>Subscribe</span>
+        </button>
+
+      </form>
       <ul class="contacts__list">
         <li class='contacts__item'>
           <svg class='contacts__icon' width='25' height='25'>
