--- a/src/partials/layouts/footer.html
+++ b/src/partials/layouts/footer.html
@@ -28,6 +28,8 @@
       </div>
     </div>
     <div class="footer__contacts contacts">
+      <h3 class="contacts__title">New’s Letter</h3>
+      <p class="contacts__subtitle">get Daily update’s about events, product amd more</p>
       <form class="contacts__form 'subscr-form">
         <label class='subscr-form__field'>
           <input type='email' class='subscr-form__input' name='mail'
@@ -36,8 +38,8 @@
         <button type='button' class=' button subscr-form__btn'>
           <span>Subscribe</span>
         </button>
-
       </form>
+      <p>Reach us</p>
       <ul class="contacts__list">
         <li class='contacts__item'>
           <svg class='contacts__icon' width='25' height='25'>
