--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,14 +3,22 @@
 
   &__container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    @include for-size(tablet) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
   }
 
   &__navigation {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: center;
+    @include for-size(tablet) {
+      align-items: start;
+    }
   }
 
   &__menu {
@@ -22,23 +30,16 @@
 }
 
 .f-menu {
-  column-count: 2; /* Устанавливаем количество колонок */
+  column-count: 2;
   column-gap: 20px;
 
   &__item {
-    margin-right: 75px;
+
     margin-bottom: 43px;
-
-    &:nth-child(n+4) {
-      margin-right: 0;
+    @include for-size(tablet) {
+      margin-right: 75px;
     }
-
   }
-
-  &__item:nth-child(n+4) {
-    margin-right: 0;
-  }
-
 
   &__link {
     padding: 10px 0;
@@ -55,6 +56,13 @@
 }
 
 .contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @include for-size(tablet) {
+    align-items: start;
+  }
+
   &__title {
     color: #FFF;
     font-family: Baskervville, sans-serif;
@@ -128,7 +136,6 @@
 
 .subscr-form {
   min-width: 100%;
-  background: tomato;
 
   &__field {
   }
@@ -141,6 +148,7 @@
   }
 
   &__btn {
+    width: 100%;
     margin-top: 14px;
     padding: 19.3px 55px;
     color: #FFF;
@@ -154,6 +162,9 @@
     background-color: #272727;
     cursor: pointer;
     transition: background-color, color 0.5s ease;
+    @include for-size(tablet) {
+      max-width: 179px;
+    }
 
     &:hover {
       background-color: #a9a3a3;
