modify hero and header for respons design

--- a/src/partials/layouts/header.html
+++ b/src/partials/layouts/header.html
@@ -6,6 +6,14 @@
     <nav class='header__menu menu'>
       <include src='./partials/components/menu.html'></include>
     </nav>
+    <nav class='header__menu-mobile'>
+      <include src='./partials/components/menu-mobile.html'></include>
+    </nav>
+    <button type='button' class='header__mobile-menu js-open-menu' aria-expanded='false' aria-controls='mobile-menu'>
+      <svg class='icon' width='20' height='14'>
+        <use xlink:href='./images/sprite.svg#icon-open-menu'></use>
+      </svg>
+    </button>
   </div>
 </header>
 
