--- a/src/partials/components/menu-mobile.html
+++ b/src/partials/components/menu-mobile.html
@@ -5,22 +5,22 @@
     </svg>
   </button>
   <ul class='menu-mobile__list'>
-    <li class='menu__item'>
+    <li class='menu-mobile__item'>
       <a href='#home' class='menu-mobile__link'>home</a>
     </li>
-    <li class='menu__item'>
+    <li class='menu-mobile__item'>
       <a href='#events' class='menu-mobile__link'>events</a>
     </li>
-    <li class='menu__item'>
+    <li class='menu-mobile__item'>
       <a href='#gallery' class='menu-mobile__link'>gallery</a>
     </li>
-    <li class='menu__item'>
+    <li class='menu-mobile__item'>
       <a href='#updates' class='menu-mobile__link'>updates</a>
     </li>
-    <li class='menu__item'>
+    <li class='menu-mobile__item'>
       <a href='#history' class='menu-mobile__link'>history</a>
     </li>
-    <li class='menu__item'>
+    <li class='menu-mobile__item'>
       <a href='#contact' class='menu-mobile__link'>contact</a>
     </li>
   </ul>
