--- a/src/partials/layouts/gallery.html
+++ b/src/partials/layouts/gallery.html
@@ -1,3 +1,105 @@
-<section class=" ">
-  <div class="container hero__ "></div>
+<section class="gallery">
+  <div class="container gallery__container">
+    <ul class="gallery__list">
+      <li class="gallery__item">
+        <picture>
+          <source srcset="
+                          ./images/gallery/image03.webp 1x,
+                          ./images/gallery/image03@2x.webp 2x"
+                  type="image/webp"
+                  media="(min-width: 1260px)">
+          <source srcset="
+                          ./images/gallery/image03.jpg 1x,
+                          ./images/gallery/image03@2x.jpg 2x"
+                  media="(min-width: 1260px)">
+          <img class="_img" src="./images/gallery/image03.jpg" alt="Art column" width="408">
+        </picture>
+      </li>
+      <li class="gallery__item">
+        <picture>
+          <source srcset="
+                          ./images/gallery/image05.webp 1x,
+                          ./images/gallery/image05@2x.webp 2x"
+                  type="image/webp"
+                  media="(min-width: 1260px)">
+          <source srcset="
+                          ./images/gallery/image05.jpg 1x,
+                          ./images/gallery/image05@2x.jpg 2x"
+                  media="(min-width: 1260px)">
+          <img class="_img" src="./images/gallery/image05.jpg" alt="Art column" width="408">
+        </picture>
+      </li>
+      <li class="gallery__item">
+        <picture>
+          <source srcset="
+                          ./images/gallery/image07.webp 1x,
+                          ./images/gallery/image07@2x.webp 2x"
+                  type="image/webp"
+                  media="(min-width: 1260px)">
+          <source srcset="
+                          ./images/gallery/image07.jpg 1x,
+                          ./images/gallery/image07@2x.jpg 2x"
+                  media="(min-width: 1260px)">
+          <img class="_img" src="./images/gallery/image07.jpg" alt="Art column" width="408">
+        </picture>
+      </li>
+      <li class="gallery__item">
+        <picture>
+          <source srcset="
+                          ./images/gallery/image04.webp 1x,
+                          ./images/gallery/image04@2x.webp 2x"
+                  type="image/webp"
+                  media="(min-width: 1260px)">
+          <source srcset="
+                          ./images/gallery/image04.jpg 1x,
+                          ./images/gallery/image04@2x.jpg 2x"
+                  media="(min-width: 1260px)">
+          <img class="_img" src="./images/gallery/image04.jpg" alt="Art column" width="408">
+        </picture>
+      </li>
+      <li class="gallery__item">
+        <picture>
+          <source srcset="
+                          ./images/gallery/image06.webp 1x,
+                          ./images/gallery/image06@2x.webp 2x"
+                  type="image/webp"
+                  media="(min-width: 1260px)">
+          <source srcset="
+                          ./images/gallery/image06.jpg 1x,
+                          ./images/gallery/image06@2x.jpg 2x"
+                  media="(min-width: 1260px)">
+          <img class="_img" src="./images/gallery/image06.jpg" alt="Art column" width="408">
+        </picture>
+      </li>
+      <li class="gallery__item">
+        <picture>
+          <source srcset="
+                          ./images/gallery/image08.webp 1x,
+                          ./images/gallery/image08@2x.webp 2x"
+                  type="image/webp"
+                  media="(min-width: 1260px)">
+          <source srcset="
+                          ./images/gallery/image08.jpg 1x,
+                          ./images/gallery/image08@2x.jpg 2x"
+                  media="(min-width: 1260px)">
+          <img class="_img" src="./images/gallery/image08.jpg" alt="Art column" width="408">
+        </picture>
+      </li>
+      <li class="gallery__item">
+        <picture>
+          <source srcset="
+                          ./images/gallery/image09.webp 1x,
+                          ./images/gallery/image09@2x.webp 2x"
+                  type="image/webp"
+                  media="(min-width: 1260px)">
+          <source srcset="
+                          ./images/gallery/image09.jpg 1x,
+                          ./images/gallery/image09@2x.jpg 2x"
+                  media="(min-width: 1260px)">
+          <img class="_img" src="./images/gallery/image09.jpg" alt="Art column" width="408">
+        </picture>
+      </li>
+    </ul>
+
+  </div>
 </section>
