--- a/src/partials/layouts/gallery.html
+++ b/src/partials/layouts/gallery.html
@@ -4,99 +4,99 @@
       <li class="gallery__item">
         <picture>
           <source srcset="
-                          ./images/gallery/image03.webp 1x,
-                          ./images/gallery/image03@2x.webp 2x"
+                          ./images/gallery/woman.webp 1x,
+                          ./images/gallery/woman@2x.webp 2x"
                   type="image/webp"
                   media="(min-width: 1260px)">
           <source srcset="
-                          ./images/gallery/image03.jpg 1x,
-                          ./images/gallery/image03@2x.jpg 2x"
+                          ./images/gallery/woman.jpg 1x,
+                          ./images/gallery/woman@2x.jpg 2x"
                   media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/image03.jpg" alt="Art column" width="408">
+          <img class="_img" src="./images/gallery/woman.jpg" alt="Art woman" width="408">
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
           <source srcset="
-                          ./images/gallery/image05.webp 1x,
-                          ./images/gallery/image05@2x.webp 2x"
+                          ./images/gallery/queen.webp 1x,
+                          ./images/gallery/queen@2x.webp 2x"
                   type="image/webp"
                   media="(min-width: 1260px)">
           <source srcset="
-                          ./images/gallery/image05.jpg 1x,
-                          ./images/gallery/image05@2x.jpg 2x"
+                          ./images/gallery/queen.jpg 1x,
+                          ./images/gallery/queen@2x.jpg 2x"
                   media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/image05.jpg" alt="Art column" width="408">
+          <img class="_img" src="./images/gallery/queen.jpg" alt="Art column" width="408">
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
           <source srcset="
-                          ./images/gallery/image07.webp 1x,
-                          ./images/gallery/image07@2x.webp 2x"
+                          ./images/gallery/head.webp 1x,
+                          ./images/gallery/head@2x.webp 2x"
                   type="image/webp"
                   media="(min-width: 1260px)">
           <source srcset="
-                          ./images/gallery/image07.jpg 1x,
-                          ./images/gallery/image07@2x.jpg 2x"
+                          ./images/gallery/head.jpg 1x,
+                          ./images/gallery/head@2x.jpg 2x"
                   media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/image07.jpg" alt="Art column" width="408">
+          <img class="_img" src="./images/gallery/head.jpg" alt="Art column" width="408">
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
           <source srcset="
-                          ./images/gallery/image04.webp 1x,
-                          ./images/gallery/image04@2x.webp 2x"
+                          ./images/gallery/pictures.webp 1x,
+                          ./images/gallery/pictures@2x.webp 2x"
                   type="image/webp"
                   media="(min-width: 1260px)">
           <source srcset="
-                          ./images/gallery/image04.jpg 1x,
-                          ./images/gallery/image04@2x.jpg 2x"
+                          ./images/gallery/pictures.jpg 1x,
+                          ./images/gallery/pictures@2x.jpg 2x"
                   media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/image04.jpg" alt="Art column" width="408">
+          <img class="_img" src="./images/gallery/pictures.jpg" alt="Art column" width="408">
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
           <source srcset="
-                          ./images/gallery/image06.webp 1x,
-                          ./images/gallery/image06@2x.webp 2x"
+                          ./images/gallery/statue.webp 1x,
+                          ./images/gallery/statue@2x.webp 2x"
                   type="image/webp"
                   media="(min-width: 1260px)">
           <source srcset="
-                          ./images/gallery/image06.jpg 1x,
-                          ./images/gallery/image06@2x.jpg 2x"
+                          ./images/gallery/statue.jpg 1x,
+                          ./images/gallery/statue@2x.jpg 2x"
                   media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/image06.jpg" alt="Art column" width="408">
+          <img class="_img" src="./images/gallery/statue.jpg" alt="Art column" width="408">
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
           <source srcset="
-                          ./images/gallery/image08.webp 1x,
-                          ./images/gallery/image08@2x.webp 2x"
+                          ./images/gallery/window.webp 1x,
+                          ./images/gallery/window@2x.webp 2x"
                   type="image/webp"
                   media="(min-width: 1260px)">
           <source srcset="
-                          ./images/gallery/image08.jpg 1x,
-                          ./images/gallery/image08@2x.jpg 2x"
+                          ./images/gallery/window.jpg 1x,
+                          ./images/gallery/window@2x.jpg 2x"
                   media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/image08.jpg" alt="Art column" width="408">
+          <img class="_img" src="./images/gallery/window.jpg" alt="Art column" width="408">
         </picture>
       </li>
       <li class="gallery__item">
         <picture>
           <source srcset="
-                          ./images/gallery/image09.webp 1x,
-                          ./images/gallery/image09@2x.webp 2x"
+                          ./images/gallery/gallery.webp 1x,
+                          ./images/gallery/gallery@2x.webp 2x"
                   type="image/webp"
                   media="(min-width: 1260px)">
           <source srcset="
-                          ./images/gallery/image09.jpg 1x,
-                          ./images/gallery/image09@2x.jpg 2x"
+                          ./images/gallery/gallery.jpg 1x,
+                          ./images/gallery/gallery@2x.jpg 2x"
                   media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/image09.jpg" alt="Art column" width="408">
+          <img class="_img" src="./images/gallery/gallery.jpg" alt="Art column" width="408">
         </picture>
       </li>
     </ul>
