--- a/src/partials/components/headLinks.html
+++ b/src/partials/components/headLinks.html
@@ -9,6 +9,7 @@
   rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollTrigger.min.js"></script>
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
 <link rel='stylesheet' href='./sass/libs/swiper-bundle.min.css'>
 
