modify styles of gallery section

--- a/src/partials/layouts/gallery.html
+++ b/src/partials/layouts/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery">
+<section class="gallery" id="gallery">
   <div class="container gallery__container">
     <ul class="gallery__list">
       <li class="gallery__item">
@@ -15,6 +15,21 @@
           <img class="_img" src="./images/gallery/woman.jpg" alt="Art woman" width="408">
         </picture>
       </li>
+            <li class="gallery__item">
+              <picture>
+                <source srcset="
+                                ./images/gallery/pictures.webp 1x,
+                                ./images/gallery/pictures@2x.webp 2x"
+                        type="image/webp"
+                        media="(min-width: 1260px)">
+                <source srcset="
+                                ./images/gallery/pictures.jpg 1x,
+                                ./images/gallery/pictures@2x.jpg 2x"
+                        media="(min-width: 1260px)">
+                <img class="_img" src="./images/gallery/pictures.jpg" alt="Art column" width="408">
+              </picture>
+            </li>
+
       <li class="gallery__item">
         <picture>
           <source srcset="
@@ -29,6 +44,20 @@
           <img class="_img" src="./images/gallery/queen.jpg" alt="Art column" width="408">
         </picture>
       </li>
+            <li class="gallery__item">
+              <picture>
+                <source srcset="
+                                ./images/gallery/statue.webp 1x,
+                                ./images/gallery/statue@2x.webp 2x"
+                        type="image/webp"
+                        media="(min-width: 1260px)">
+                <source srcset="
+                                ./images/gallery/statue.jpg 1x,
+                                ./images/gallery/statue@2x.jpg 2x"
+                        media="(min-width: 1260px)">
+                <img class="_img" src="./images/gallery/statue.jpg" alt="Art column" width="408">
+              </picture>
+            </li>
       <li class="gallery__item">
         <picture>
           <source srcset="
@@ -43,34 +72,8 @@
           <img class="_img" src="./images/gallery/head.jpg" alt="Art column" width="408">
         </picture>
       </li>
-      <li class="gallery__item">
-        <picture>
-          <source srcset="
-                          ./images/gallery/pictures.webp 1x,
-                          ./images/gallery/pictures@2x.webp 2x"
-                  type="image/webp"
-                  media="(min-width: 1260px)">
-          <source srcset="
-                          ./images/gallery/pictures.jpg 1x,
-                          ./images/gallery/pictures@2x.jpg 2x"
-                  media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/pictures.jpg" alt="Art column" width="408">
-        </picture>
-      </li>
-      <li class="gallery__item">
-        <picture>
-          <source srcset="
-                          ./images/gallery/statue.webp 1x,
-                          ./images/gallery/statue@2x.webp 2x"
-                  type="image/webp"
-                  media="(min-width: 1260px)">
-          <source srcset="
-                          ./images/gallery/statue.jpg 1x,
-                          ./images/gallery/statue@2x.jpg 2x"
-                  media="(min-width: 1260px)">
-          <img class="_img" src="./images/gallery/statue.jpg" alt="Art column" width="408">
-        </picture>
-      </li>
+
+
       <li class="gallery__item">
         <picture>
           <source srcset="
