--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -85,6 +85,7 @@
   }
 
   &__form {
+    width: 100%;
     margin-top: 22.5px;
   }
 
@@ -138,6 +139,7 @@
   min-width: 100%;
 
   &__field {
+    width: 100%;
   }
 
   &__input {
