--- a/src/sass/layout/index.scss
+++ b/src/sass/layout/index.scss
@@ -3,7 +3,7 @@
 @import "./about";
 @import "./events";
 @import "./gallery";
-@import "./updates";
-@import "history";
-@import "contact";
-@import "footer";
+@import "./products";
+@import "./history";
+@import "./contact";
+@import "./footer";
