--- a/src/partials/layouts/products.html
+++ b/src/partials/layouts/products.html
@@ -1,5 +1,6 @@
 <section class="products">
   <div class="container products__container">
+    <h2 class="products__main-title">Our Product</h2>
     <ul class="products__slider">
       <li class="products__item"
           style="background-image: url('./images/products/statue.jpg');">
