--- a/src/partials/layouts/products.html
+++ b/src/partials/layouts/products.html
@@ -1,6 +1,6 @@
 <section class="products">
   <div class="container products__container">
-    <h2 class="products__main-title">Our Product</h2>
+    <h2 class="products__main-title"><span>Our</span>Product</h2>
     <ul class="products__slider">
       <li class="products__item"
           style="background-image: url('./images/products/statue.jpg');">
@@ -8,17 +8,17 @@
         <p class="products__item-content">Lorem ipsum dolor sit amet, consectetur </p>
       </li>
       <li class="products__item"
-          style="background-image: url(https://images.unsplash.com/photo-1499591934245-40b55745b905?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80);">
+          style="background-image: url('./images/products/queen@2x.jpg');">
         <h3 class="products__item-title">Product</h3>
         <p class="products__item-content">Lorem ipsum dolor sit amet, consectetur </p>
       </li>
       <li class="products__item"
-          style="background-image: url(https://images.unsplash.com/photo-1499591934245-40b55745b905?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80);">
+          style="background-image: url('./images/products/statue@2x.jpg');">
         <h3 class="products__item-title">Product</h3>
         <p class="products__item-content">Lorem ipsum dolor sit amet, consectetur </p>
       </li>
       <li class="products__item"
-          style="background-image: url(https://images.unsplash.com/photo-1499591934245-40b55745b905?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80);">
+          style="background-image: url('./images/products/woman@2x.jpg');">
         <h3 class="products__item-title">Product</h3>
         <p class="products__item-content">Lorem ipsum dolor sit amet, consectetur </p>
       </li>
