fix styles of sections

--- a/src/partials/components/menu-mobile.html
+++ b/src/partials/components/menu-mobile.html
@@ -15,7 +15,7 @@
       <a href='#gallery' class='menu-mobile__link'>gallery</a>
     </li>
     <li class='menu-mobile__item'>
-      <a href='#updates' class='menu-mobile__link'>updates</a>
+      <a href='#products' class='menu-mobile__link'>products</a>
     </li>
     <li class='menu-mobile__item'>
       <a href='#history' class='menu-mobile__link'>history</a>
