--- a/src/partials/components/menu.html
+++ b/src/partials/components/menu.html
@@ -9,7 +9,7 @@
     <a href='#gallery' class='menu__link'>gallery</a>
   </li>
   <li class='menu__item'>
-    <a href='#updates' class='menu__link'>updates</a>
+    <a href='#products' class='menu__link'>products</a>
   </li>
   <li class='menu__item'>
     <a href='#history' class='menu__link'>history</a>
