--- a/src/partials/layouts/hero.html
+++ b/src/partials/layouts/hero.html
@@ -1,4 +1,4 @@
-<section class="hero" id="home">
+<section class="hero">
   <div class="hero__row">
     <div class="hero__ellipce"></div>
     <picture>
