--- a/src/partials/pages/main.html
+++ b/src/partials/pages/main.html
@@ -1,4 +1,4 @@
-<main class='page'>
+<main class='page'  id="home">
   <include src='./partials/layouts/hero.html'></include>
   <include src='./partials/layouts/about.html'></include>
   <include src='./partials/layouts/events.html'></include>
