--- a/src/partials/layouts/products.html
+++ b/src/partials/layouts/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="products">
   <div class="container products__container">
     <h2 class="products__main-title"><span>Our</span>Product</h2>
     <ul class="products__slider">
