--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,6 +7,7 @@
   top: 0;
   left: 0;
   z-index: 14;
+  transition: background-color, color 0.5s ease;
 
   &__container {
     position: relative;
