--- a/src/partials/layouts/history.html
+++ b/src/partials/layouts/history.html
@@ -1,3 +1,5 @@
-<section class=" ">
-  <div class="container hero__ "></div>
+<section class="history">
+  <div class="container history__container">
+    <h3 class="history__title">history</h3>
+  </div>
 </section>
