--- a/src/partials/layouts/products.html
+++ b/src/partials/layouts/products.html
@@ -12,7 +12,7 @@
         <h3 class="products__item-title">Product</h3>
         <p class="products__item-content">Lorem ipsum dolor sit amet, consectetur </p>
       </li>
-      <li class="products__item"
+      <li class="products__item _active"
           style="background-image: url('./images/products/statue@2x.jpg');">
         <h3 class="products__item-title">Product</h3>
         <p class="products__item-content">Lorem ipsum dolor sit amet, consectetur </p>
@@ -22,8 +22,6 @@
         <h3 class="products__item-title">Product</h3>
         <p class="products__item-content">Lorem ipsum dolor sit amet, consectetur </p>
       </li>
-
     </ul>
-
   </div>
 </section>
