--- a/src/partials/layouts/gallery.html
+++ b/src/partials/layouts/gallery.html
@@ -1,5 +1,6 @@
 <section class="gallery" id="gallery">
   <div class="container gallery__container">
+    <h3 class="gallery__title">Our gallery</h3>
     <ul class="gallery__list">
       <li class="gallery__item">
         <picture>
